# Tsetlin-Machine-in-cpp

./: CMakeLists.txt  Makefile  MultiClassTsetlin.h  README.md  TsetlinMachine.cpp  TsetlinMachine.h  main.cpp
